fix bad z-index

--- a/src/styles/assets.less
+++ b/src/styles/assets.less
@@ -172,7 +172,7 @@
     background: var(--ironsworn-color-thematic);
     position: absolute;
     aspect-ratio: @hex_deco_aspect_ratio;
-    z-index: var(--ironsworn-z-index-low);
+    z-index: auto;
     mask-repeat: no-repeat;
     transform: scaleX(-1);
     height: @hex_deco_collapsed_height;
